# gtfol_server

./: .pre-commit-config.yaml  README.md  daily_refresh.py  doppler.yaml  generate_embeddings.py  load_general.py  load_latest.py  load_leaderboard.py  pyproject.toml  run_history.sh  run_loader.sh  run_updater.sh  tweet_loader.py
core/: context_loader.py  embed.py  house_points.py  leaderboard_loader.py  tables.py  tweet_loader.py  tweet_updater.py
dbsetup/: buildspace_leaderboard.py  common.py  create_table.sql  house_points.py  setup.sql  tweets.py
dev/: migrate_to_sql_db.py  update.py
scripts/: run_embeddings.sh  run_leaderboard.sh
utils/: attribute_builder.py  docbuilder.py  prep_data.py  prep_leaderboard_data.py  prep_tweet_data.py  processor.py  query_builder.py  regex_patterns.py  score_calculator.py
